fix demo alerta dashboard

--- a/alerta/dashboard/v2/templates/dev.html
+++ b/alerta/dashboard/v2/templates/dev.html
@@ -26,11 +26,11 @@
                         </thead>
                         <tbody>
                         <tr id="R2R1-status-indicator">
-                            <td id="R2R1-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="R2R1-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="R2R1-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="R2R1-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="R2R1-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="R2R1-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="R2R1-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="R2R1-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="R2R1-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="R2R1-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -44,11 +44,11 @@
                         </thead>
                         <tbody>
                         <tr id="FrontendMobile-status-indicator">
-                            <td id="FrontendMobile-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="FrontendMobile-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="FrontendMobile-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="FrontendMobile-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="FrontendMobile-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="FrontendMobile-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FrontendMobile-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FrontendMobile-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FrontendMobile-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FrontendMobile-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -62,11 +62,11 @@
                         </thead>
                         <tbody>
                         <tr id="ContentAPI-status-indicator">
-                            <td id="ContentAPI-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="ContentAPI-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="ContentAPI-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="ContentAPI-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="ContentAPI-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="ContentAPI-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="ContentAPI-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="ContentAPI-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="ContentAPI-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="ContentAPI-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -80,11 +80,11 @@
                         </thead>
                         <tbody>
                         <tr id="Shared-status-indicator">
-                            <td id="Shared-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Shared-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Shared-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Shared-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Shared-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Shared-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Shared-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Shared-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Shared-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Shared-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -101,11 +101,11 @@
                         </thead>
                         <tbody>
                         <tr id="D2MicroApps-status-indicator">
-                            <td id="D2MicroApps-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="D2MicroApps-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="D2MicroApps-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="D2MicroApps-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="D2MicroApps-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="D2MicroApps-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="D2MicroApps-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="D2MicroApps-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="D2MicroApps-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="D2MicroApps-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -119,11 +119,11 @@
                         </thead>
                         <tbody>
                         <tr id="FlexibleIdentity-status-indicator">
-                            <td id="FlexibleIdentity-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="FlexibleIdentity-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="FlexibleIdentity-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="FlexibleIdentity-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="FlexibleIdentity-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="FlexibleIdentity-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FlexibleIdentity-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FlexibleIdentity-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FlexibleIdentity-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="FlexibleIdentity-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -137,11 +137,11 @@
                         </thead>
                         <tbody>
                         <tr id="Other-status-indicator">
-                            <td id="Other-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Other-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -155,11 +155,11 @@
                         </thead>
                         <tbody>
                         <tr id="Network-status-indicator">
-                            <td id="Network-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Network-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -175,7 +175,7 @@
 
         heartbeatAlerts();
 
-        var env_filter = '&environment=~RELEASE|QA|TEST|CODE|DEV|GUDEV|STAGE|LWP';
+        var env_filter = '&environment=development';
         var asiFilters = {
             'R2R1':             '&service=R2&service=R1',
             'FrontendMobile':   '&service=Frontend&service=Mobile',
