--- a/alerta/dashboard/v2/templates/index.html
+++ b/alerta/dashboard/v2/templates/index.html
@@ -94,11 +94,11 @@
                         </thead>
                         <tbody>
                         <tr id="Web-status-indicator">
-                            <td id="Web-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Web-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Web-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Web-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Web-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Web-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Web-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Web-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Web-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Web-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -112,11 +112,11 @@
                         </thead>
                         <tbody>
                         <tr id="Application-status-indicator">
-                            <td id="Application-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Application-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Application-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Application-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Application-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Application-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Application-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Application-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Application-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Application-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -130,11 +130,11 @@
                         </thead>
                         <tbody>
                         <tr id="Database-status-indicator">
-                            <td id="Database-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Database-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Database-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Database-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Database-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Database-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Database-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Database-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Database-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Database-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -148,11 +148,11 @@
                         </thead>
                         <tbody>
                         <tr id="Storage-status-indicator">
-                            <td id="Storage-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Storage-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Storage-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Storage-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Storage-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Storage-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Storage-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Storage-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Storage-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Storage-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -170,11 +170,11 @@
                         </thead>
                         <tbody>
                         <tr id="OS-status-indicator">
-                            <td id="OS-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="OS-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="OS-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="OS-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="OS-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="OS-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="OS-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="OS-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="OS-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="OS-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -188,11 +188,11 @@
                         </thead>
                         <tbody>
                         <tr id="Hardware-status-indicator">
-                            <td id="Hardware-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Hardware-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -206,11 +206,11 @@
                         </thead>
                         <tbody>
                         <tr id="Other-status-indicator">
-                            <td id="Other-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Other-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Other-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Other-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -224,11 +224,11 @@
                         </thead>
                         <tbody>
                         <tr id="Network-status-indicator">
-                            <td id="Network-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Network-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Network-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Network-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
