--- a/alerta/dashboard/v2/templates/infra.html
+++ b/alerta/dashboard/v2/templates/infra.html
@@ -26,11 +26,11 @@
                         </thead>
                         <tbody>
                         <tr id="KPL-status-indicator">
-                            <td id="KPL-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="KPL-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="KPL-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="KPL-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="KPL-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="KPL-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="KPL-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="KPL-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="KPL-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="KPL-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -44,11 +44,11 @@
                         </thead>
                         <tbody>
                         <tr id="BRK-status-indicator">
-                            <td id="BRK-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="BRK-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="BRK-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="BRK-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="BRK-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="BRK-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="BRK-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="BRK-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="BRK-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="BRK-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -62,11 +62,11 @@
                         </thead>
                         <tbody>
                         <tr id="EC2-status-indicator">
-                            <td id="EC2-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="EC2-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="EC2-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="EC2-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="EC2-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="EC2-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="EC2-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="EC2-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="EC2-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="EC2-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -80,11 +80,11 @@
                         </thead>
                         <tbody>
                         <tr id="NetworkSyslog-status-indicator">
-                            <td id="NetworkSyslog-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="NetworkSyslog-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="NetworkSyslog-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="NetworkSyslog-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="NetworkSyslog-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="NetworkSyslog-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="NetworkSyslog-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="NetworkSyslog-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="NetworkSyslog-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="NetworkSyslog-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -101,11 +101,11 @@
                         </thead>
                         <tbody>
                         <tr id="AlertaGanglia-status-indicator">
-                            <td id="AlertaGanglia-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="AlertaGanglia-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="AlertaGanglia-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="AlertaGanglia-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="AlertaGanglia-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="AlertaGanglia-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="AlertaGanglia-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="AlertaGanglia-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="AlertaGanglia-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="AlertaGanglia-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -119,11 +119,11 @@
                         </thead>
                         <tbody>
                         <tr id="Puppet-status-indicator">
-                            <td id="Puppet-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Puppet-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Puppet-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Puppet-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Puppet-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Puppet-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Puppet-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Puppet-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Puppet-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Puppet-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -137,11 +137,11 @@
                         </thead>
                         <tbody>
                         <tr id="Deploys-status-indicator">
-                            <td id="Deploys-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Deploys-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Deploys-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Deploys-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Deploys-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Deploys-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Deploys-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Deploys-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Deploys-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Deploys-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -155,11 +155,11 @@
                         </thead>
                         <tbody>
                         <tr id="Hardware-status-indicator">
-                            <td id="Hardware-critical" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-major" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-minor" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-warning" class="status-indicator-count"><b>0</b></td>
-                            <td id="Hardware-normal" class="status-indicator-count"><b>0</b></td>
+                            <td id="Hardware-critical" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-major" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-minor" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-warning" class="status-indicator-count zero"><b>0</b></td>
+                            <td id="Hardware-normal" class="status-indicator-count zero"><b>0</b></td>
                         </tr>
                         </tbody>
                     </table>
@@ -175,7 +175,7 @@
 
         heartbeatAlerts();
 
-        var env_filter = ''; // all environments
+        var env_filter = '&environment=infrastructure';
         var asiFilters = {
             'KPL':           '&tags=datacentre:dc1',
             'BRK':           '&tags=datacentre:dc2',
