--- a/alerta/dashboard/v2/templates/widgets/status.html
+++ b/alerta/dashboard/v2/templates/widgets/status.html
@@ -38,7 +38,7 @@
 
 <script>
 
-    var API_HOST = appConfig.api_host + ':' + appConfig.api_port;
+    var API_URL = appConfig.endpoint;
     var REFRESH_INTERVAL = 30; // seconds
 
     var filter = '{{ query|safe }}';
@@ -49,7 +49,7 @@
 
     function updateStatusIndicator(filter, refresh) {
 
-        $.getJSON('http://' + API_HOST + '/api/alerts?callback=?&'
+        $.getJSON(API_URL + '/api/alerts?callback=?&'
                 + filter + status + limit + from, function (data) {
 
             var more = '';
