--- a/alerta/app/templates/index.html
+++ b/alerta/app/templates/index.html
@@ -12,7 +12,10 @@
 <p>Some basic examples of using the API are:
 <ul>
     <li> <a href="/api/alerts">Alerts</a>
-    <li> <a href="/api/alert/counts">Alert counts</a>
+    <li> <a href="/api/environments">Environments</a>
+    <li> <a href="/api/services">Services</a>
+    <li> <a href="/api/alerts/count">Alert Counts</a>
+    <li> <a href="/api/alerts/top10">Alert Top 10</a>
     <li> <a href="/api/heartbeats">Heartbeats</a>
 </ul>
 
