--- a/alerta/app/templates/index.html
+++ b/alerta/app/templates/index.html
@@ -11,12 +11,12 @@
 <h2>Examples</h2>
 <p>Some basic examples of using the API are:
 <ul>
-    <li> <a href="/api/alerts">Alerts</a>
-    <li> <a href="/api/environments">Environments</a>
-    <li> <a href="/api/services">Services</a>
-    <li> <a href="/api/alerts/count">Alert Counts</a>
-    <li> <a href="/api/alerts/top10">Alert Top 10</a>
-    <li> <a href="/api/heartbeats">Heartbeats</a>
+    <li> <a href="/alerts">Alerts</a>
+    <li> <a href="/environments">Environments</a>
+    <li> <a href="/services">Services</a>
+    <li> <a href="/alerts/count">Alert Counts</a>
+    <li> <a href="/alerts/top10">Alert Top 10</a>
+    <li> <a href="/heartbeats">Heartbeats</a>
 </ul>
 
 <h2>Query parameters</h2>
